products input commit

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -25,12 +25,12 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link "  href="./products/index.ejs"
+              <a class="nav-link "  href="./products"
                 >Products</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./products/new.ejs">Add Products</a>
+              <a class="nav-link" href="./products/new">Add Products</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Orders</a>
