--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -30,7 +30,8 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./products/new">Add Products</a>
+              <a class="nav-link" href="./products/new
+              ">Add Products</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Orders</a>
@@ -40,7 +41,7 @@
       </div>
     </nav>
     <main class="container mt-4">
-        <%- body %>
+        <%- typeof body !== 'undefined' ? body : '' %> 
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
