--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -6,16 +6,16 @@
     </div>
 
     <% if (products.length > 0) { %>
-    <div class="row row-cols-1">
+    <div class="row row-cols-1 newProducts ">
       <% products.forEach(product => { %>
        
-        <div class="card" style="width: 18rem">
+        <div class="card" >
             <!-- <img src="..." class="card-img-top" alt="..." /> -->
             <div class="card-body">
               <h5 class="card-title"><%= product.name %></h5>
-              <p class="card-text">$<%= product.price.toFixed(2) %></p>
+              <p class="card-text price">$<%= product.price.toFixed(2) %></p>
               <% if (product.description) { %>
-              <p class="card-text"><%= product.description %></p>
+              <p class="card-text description"><%= product.description %></p>
               <% } %>
               <button onclick="deleteProduct('<%= product.id %>')"
                 class="btn btn-danger btn-sm" >
@@ -50,7 +50,7 @@
     }
 
     try {
-      const response = await fetch(`/api/products/${id}`, {
+      const response = await fetch(`/data/products/${id}`, {
         method: "DELETE",
       });
 
