--- a/views/products/new.ejs
+++ b/views/products/new.ejs
@@ -1,6 +1,6 @@
 
 <div class="row justify-content-center">
-    <div class="col-md-6">
+    <div class="col-md-10">
         <div class="card">
             <div class="card-body">
                 <h1 class="card-title">Add New Product</h1>
@@ -11,7 +11,7 @@
                     </div>
                 <% } %>
 
-                <form action="/products" method="POST">
+                <form action="/products" method="POST" class="newProductForm">
                     <div class="mb-3">
                         <label for="name" class="form-label">Product Name:</label>
                         <input type="text" 
