Edit input commit

--- a/views/products/index.ejs
+++ b/views/products/index.ejs
@@ -63,5 +63,12 @@
       console.error("Error:", error);
       alert("Error deleting product");
     }
+    
   }
+
+ function editProduct(id) {
+    window.location.href = `/products/${id}/edit`
+    
+  }
+
 </script>
